Add analytics view

--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -100,7 +100,7 @@
 
 <li role="presentation" class="menu-all-results">
 	<a href="{{ instance|url:'all-results' }}">
-		<span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
+		<span class="glyphicon glyphicon-stats" aria-hidden="true"></span>
 		{% trans "All results" %}
 	</a>
 </li>
