add exercise title before block columns
Signed-off-by: Ou Jingzhou <ouj1@cs-245.org.aalto.fi>

--- a/exercise/templates/exercise/exercise_base.html
+++ b/exercise/templates/exercise/exercise_base.html
@@ -30,6 +30,10 @@
 {% endblock %}
 {% endblock %}
 
+{% block exercise_title %}
+<h3 class = "exercise_title">{{ current.name }}</h3>
+{% endblock %}
+
 {% block columns %}
 <div class="{% if exercise.use_wide_column %}col-lg-12{% else %}col-lg-9{% endif %} exercise-column">
 
