--- a/exercise/templates/exercise/exercise_base.html
+++ b/exercise/templates/exercise/exercise_base.html
@@ -31,7 +31,9 @@
 {% endblock %}
 
 {% block exercise_title %}
-<h3 class = "exercise_title">{{ current.name }}</h3>
+<div>
+	<h3 class="exercise_title">{{ current.name }}</h3>
+</div>
 {% endblock %}
 
 {% block columns %}
