--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -12,7 +12,7 @@
 {% endfor %}
 {% endblock %}
 
-{% block title %}{{ block.super }} {{ course.name }}{% endblock %}
+{% block title %}{{ course.name }} | {{ block.super }} {% endblock %}
 
 {% block content %}
 <div class="row">
