--- a/exercise/templates/exercise/staff/submissions_summary.html
+++ b/exercise/templates/exercise/staff/submissions_summary.html
@@ -4,7 +4,7 @@
 {% load course %}
 {% load exercise %}
 
-{% block title %}{{ block.super }} / {% trans "Submissions summary" %}{% endblock %}
+{% block title %}{% trans "Submissions summary" %} | {{ block.super }}{% endblock %}
 {% block view_tag %}all-submissions{% endblock %}
 
 {% block exercisebreadcrumblist %}
