--- a/course/templates/course/module.html
+++ b/course/templates/course/module.html
@@ -3,7 +3,7 @@
 {% load course %}
 {% load apps %}
 
-{% block title %}{{ block.super }}: {{ current.name }}{% endblock %}
+{% block title %}{{ current.name }} | {{ block.super }}{% endblock %}
 
 {% block siblings %}
 {% include "course/_siblings.html" %}
