--- a/course/templates/course/staff/group_delete.html
+++ b/course/templates/course/staff/group_delete.html
@@ -3,7 +3,7 @@
 {% load course %}
 {% load bootstrap %}
 
-{% block title %}{{ block.super }}: {% trans "Groups" %}: {% trans "Remove" %}{% endblock %}
+{% block title %}{% trans "Remove" %} | {% trans "Groups" %} | {{ block.super }}{% endblock %}
 {% block view_tag %}groups-edit{% endblock %}
 
 {% block breadcrumblist %}
