--- a/course/templates/course/staff/groups.html
+++ b/course/templates/course/staff/groups.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load course %}
 
-{% block title %}{{ block.super }}: {% trans "Groups" %}{% endblock %}
+{% block title %}{% trans "Groups" %} | {{ block.super }}{% endblock %}
 {% block view_tag %}groups-edit{% endblock %}
 
 {% block breadcrumblist %}
