--- a/edit_course/templates/edit_course/edit_course_base.html
+++ b/edit_course/templates/edit_course/edit_course_base.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load course %}
 
-{% block title %}{{ block.super}}: {% block edittitle %}{% trans "Edit course" %}{% endblock %}{% endblock %}
+{% block title %}{% block edittitle %}{% trans "Edit course" %}{% endblock %} | {{ block.super}}{% endblock %}
 {% block view_tag %}edit-course,edit-content{% endblock %}
 
 {% block breadcrumblist %}
