--- a/exercise/templates/exercise/staff/results.html
+++ b/exercise/templates/exercise/staff/results.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load course %}
 
-{% block title %}{{ block.super }}: {% trans "All results" %}{% endblock %}
+{% block title %}{% trans "All results" %} | {{ block.super }}{% endblock %}
 {% block view_tag %}all-results{% endblock %}
 
 {% block breadcrumblist %}
