--- a/exercise/templates/exercise/staff/user_results.html
+++ b/exercise/templates/exercise/staff/user_results.html
@@ -5,7 +5,7 @@
 {% load apps %}
 {% load diploma %}
 
-{% block title %}{{ block.super }}: {{ student.get_full_name }}{% endblock %}
+{% block title %}{{ student.get_full_name }} | {{ block.super }}{% endblock %}
 {% block view_tag %}participants{% endblock %}
 
 {% block breadcrumblist %}
