Added id inside dd tag

--- a/edit_course/templates/edit_course/batch_assess.html
+++ b/edit_course/templates/edit_course/batch_assess.html
@@ -24,7 +24,8 @@
 <dl>
 	<dt>XXXXX1 and XXXXX2</dt>
     <dd>the real student ids</dd>
-	<dt>X1 (integer)</dt> <p>Your userprofile id is <b>{{id}}</b>.</p>
+	<dt>X1 (integer)</dt>
+    <dd>the system userprofile id of the desired grader. Your userprofile id is <b>{{id}}.</b></dd>
 	<dt>Z1 and Z2 (integers)</dt>
     <dd>the system exercise ids</dd>
 </dl>
