--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -19,7 +19,7 @@
             <a href="{{ instance_url }}">
                 <div class="image" aria-hidden="true">
                     {% if instance.image %}
-                    <img src="{{ instance.image.url }}" alt="{{ instance.course.name }}" />
+                    <img src="{{ instance.image.url }}" alt="{{ instance.course.name|parse_localization }}" />
                     {% else %}
                     <h1 class="glyphicon glyphicon-book"></h1>
                     {% endif %}
@@ -28,7 +28,7 @@
             <div class="caption">
                 <h3>
                 	<a href="{{ instance_url }}">
-                        {{ instance.course.name }}<br />
+                        {{ instance.course.name|parse_localization }}<br />
                     </a>
                 </h3>
                 <p>
