--- a/exercise/templates/exercise/_children.html
+++ b/exercise/templates/exercise/_children.html
@@ -13,16 +13,16 @@
 <li>
   {% if accessible %}
   {% if entry.is_empty %}
-  {{ entry.name }}
+  {{ entry.name|parse_localization }}
   {% else %}
-  <a href="{{ entry.link }}" class="{% if entry|is_in_maintenance %}maintenance{% endif %}">{{ entry.name }}</a>
+  <a href="{{ entry.link }}" class="{% if entry|is_in_maintenance %}maintenance{% endif %}">{{ entry.name|parse_localization }}</a>
   {% endif %}
   {% if entry.submission_count %}
   {% points_badge entry %}
   {% endif %}
 
   {% else %}
-  {{ entry.name }}
+  {{ entry.name|parse_localization }}
   {% if is_course_staff %}
   <a class="btn btn-default btn-xs" href="{{ entry.link }}">
     <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
