--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -8,7 +8,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>{{ current.name }}</title>
+		<title>{{ current.name|parse_localization }}</title>
 
 		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 
