Add students_by_user_id to batch submission json

--- a/edit_course/templates/edit_course/batch_assess.html
+++ b/edit_course/templates/edit_course/batch_assess.html
@@ -61,6 +61,17 @@
       "exercise_id": Z2,
       "submission_time": "2014-09-24 11:50",
       "points": 1
+    },
+    {
+      "students_by_user_id": [
+        "aplus user id 1",
+        "aplus user id 2"
+      ],
+      "feedback": "User found using A+ user id. User id is used in API and grading request url",
+      "grader": X1,
+      "exercise_id": Z2,
+      "submission_time": "2014-09-24 11:50",
+      "points": 20
     }
   ]
 }
