--- a/templates/base.html
+++ b/templates/base.html
@@ -88,17 +88,21 @@
                             {% if user.is_authenticated %}
                             {% group_select %}
                             {% notification_menu %}
-                            <li role="presentation" class="menu-profile">
-                                <a href="{% url 'profile' %}">
-                                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                                    {{ user.username }}
-                                </a>
-                            </li>
-                            <li role="presentation">
-                                <a href="{% url 'logout' %}">
+                            <li class="dropdown">
+                              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                                {{ user.username }} <span class="caret"></span>
+                              </a>
+                              <ul class="dropdown-menu">
+                                <li><a href="{% url 'profile' %}">{% trans "Profile" %}</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li>
+                                  <a href="{% url 'logout' %}">
                                     <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
                                     {% trans "Log out"%}
-                                </a>
+                                  </a>
+                                </li>
+                              </ul>
                             </li>
                             {% else %}
                             <li role="presentation">
