--- a/templates/base.html
+++ b/templates/base.html
@@ -91,7 +91,7 @@
                             <li class="dropdown">
                               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                 <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                                {{ user.username }} <span class="caret"></span>
+                                {{ user.first_name }} {{ user.last_name }} <span class="caret"></span>
                               </a>
                               <ul class="dropdown-menu">
                                 <li><a href="{% url 'profile' %}">{% trans "Profile" %}</a></li>
@@ -131,7 +131,7 @@
                             <li role="presentation">
                                 <a href="{% url 'profile' %}">
                                     <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                            	    {{ user.username }}
+                            	    {{ user.first_name }} {{ user.last_name }}
                                 </a>
                             </li>
                             <li role="presentation">
