fixed spelling mistakes and recompiled translations

--- a/external_services/templates/external_services/lti_form.html
+++ b/external_services/templates/external_services/lti_form.html
@@ -21,13 +21,13 @@
 	<p>
 		{% if is_course_staff %}
 			{% blocktrans %}
-			For this service also API token is tranferred,
+			For this service also API token is transferred,
 			thus giving this service access to A+ API with your privileges.
 			If this was not intended, change 'Enable api access' in django admin.
 			{% endblocktrans %}
 		{% else %}
 			{% blocktrans %}
-			For this service also API token is tranferred,
+			For this service also API token is transferred,
 			thus giving this service access to A+ API with your privileges.
 			That means service can for example read your student number,
 			course progress and submit solutions to exercises.
