--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,10 +78,10 @@ html, body {
 /* site header */
 .topbar {
     background-color: #337ab7;
-    background-image: -moz-linear-gradient(top, #0088cc, #2e6da4);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#2e6da4));
-    background-image: -webkit-linear-gradient(top, #0088cc, #2e6da4);
-    background-image: -o-linear-gradient(top, #0088cc, #0066aa);
+    background-image: -moz-linear-gradient(top, #337ab7, #2e6da4);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#337ab7), to(#2e6da4));
+    background-image: -webkit-linear-gradient(top, #337ab7, #2e6da4);
+    background-image: -o-linear-gradient(top, #337ab7, #2e6da4);
     background-image: linear-gradient(to bottom, #337ab7, #2e6da4);
     background-repeat: repeat-x;
     border-bottom: none;
