--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 {% load course %}
 {% load notification %}
 <!DOCTYPE html>
-    <html>
+<html lang="{{ request.LANGUAGE_CODE }}">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
