Add missing loads for parse_localization

--- a/apps/templates/plugins/view_tab.html
+++ b/apps/templates/plugins/view_tab.html
@@ -1,5 +1,6 @@
 {% extends "course/course_base.html" %}
 {% load i18n %}
+{% load course %}
 
 {% block title %}{{ tab.title }} | {{ course.name|parse_localization }}{% endblock %}
 {% block view_tag %}tab{{ tab.id }}{% endblock %}
