Include translate.js in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
         <link rel="stylesheet" href="{% static 'css/main.css' %}" />
         <link rel="stylesheet" href="{% static 'css/submission.css' %}" />
         <script src="{% static 'js/aplus.js' %}"></script>
+        <script src="{% static 'js/translate.min.js' %}"></script>
 
         {% block scripts %}
             {# Put all additional scripts inside this block. #}
