--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
 
         <link rel="stylesheet" href="{% static 'css/main.css' %}" />
         <link rel="stylesheet" href="{% static 'css/submission.css' %}" />
+        <link rel="stylesheet" href="{% static 'django_colortag.css' %}" />
         <script src="{% static 'js/aplus.js' %}"></script>
 
         {% block scripts %}
